...
          <View style={styles.form}>
            <Controller
              control={control}
              name="identifier"
              render={({ field: { onChange, value } }) => (
                <FloatingInput
                  testID="login-identifier"
                  label={t('auth.identifier')}
                  value={value}
                  onChangeText={onChange}
                  keyboardType="phone-pad"
                  autoCapitalize="none"
                  autoComplete="tel"
...
            />
            <Controller
              control={control}
              name="password"
              render={({ field: { onChange, value } }) => (
                <FloatingInput
                  testID="login-password"
                  label={t('auth.password')}
                  value={value}
                  onChangeText={onChange}
                  secureTextEntry
                  autoComplete="password"
                  textContentType="password"
...
